# led_visualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json
esp32/: CMakeLists.txt  README.md  compile_flags.txt  example_main.c  led_viz.h  led_viz_esp32.c  led_viz_esp32.h  led_viz_sdk.c  library.json
esp32/stubs/: esp_err.h  esp_log.h  esp_timer.h  led_strip.h
esp32/stubs/freertos/: FreeRTOS.h  task.h
examples/: demo_programs.c
include/: led_viz.h  led_viz_sdk.c
resources/shaders/glsl330/: deferred.fs  deferred.vs  gbuffer.fs  gbuffer.vs  lighting.fs
src/: main.c  palette.c  palette.h  programs.c  programs.h  visualizer.c  visualizer.h
src/tests/: CMakeLists.txt
